--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,14 @@
     color: black;
     text-decoration: none;
   }
+  .ver {
+    position: absolute;
+    bottom: 25px;
+    right: 20px;
+    font-size: 15px;
+    color: black;
+    text-decoration: none;
+  }
   .sos {
     position: absolute;
     bottom: 25px;
