--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,13 @@
     font-size: 12px;
   }
   
+  .menulist {
+    text-align: center;
+    font-size: 15px;
+    color: black;
+    text-decoration: none;
+  }
+
   .settingsmenu {
     position: absolute;
     bottom: 25px;
@@ -84,11 +91,14 @@
         fill:white
      }
      .settingsmenu {
-     color: white;
+        color: white;
      }
      .sos {
-     color: white;
+        color: white;
      }
+     .menulist {
+        color: white;
+    }
   }
   
      #log
